crates/aranya-policy-compiler/tests/data/match_expr/optional_unreachable_literal_after_binding.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: unreachable match arm
  |
3 |         Some(b) | Some(true) => 1
  |                   ^^^^^^^^^^
